--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <link rel="stylesheet" href="assets/cssb/bootstrap.min.css.map">
 <!-- css file itself-->
 <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Demon-Slayer</title>
+  <link rel="shortcut icon" type="image/png" href="assets/imgs/demon_slayer.jpg">  
 </head>
 <body>
 <!-- header stuff -->
@@ -126,7 +127,7 @@
     <div class="containerc">
         <div class="cardc">
             <div class="imgBxc">
-                <img src="/assets/imgs/inosuke2.jpg">
+                <img src="assets/imgs/inosuke2.jpg">
             </div>
             <div class="contentc">
                 <h2>Nike Shoes</h2>
