added new files

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <img src="assets/imgs/inosuke2.jpg">
             </div>
             <div class="contentc">
-                <h2>Nike Shoes</h2>
+                <h2>Inosuke</h2>
                 <div class="size">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Amet itaque quas, minus libero cum odio ratione quae
@@ -144,7 +144,7 @@
                 <img src="assets/imgs/nezuko.jpg">
             </div>
             <div class="contentc">
-                <h2>Nike Shoes</h2>
+                <h2>Nezuko</h2>
                 <div class="size">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Amet itaque quas, minus libero cum odio ratione quae
@@ -158,7 +158,7 @@
                 <img src="assets/imgs/zenitsu2.jpg">
             </div>
             <div class="contentc">
-                <h2>Nike Shoes</h2>
+                <h2>Zenitsu</h2>
                 <div class="size">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Amet itaque quas, minus libero cum odio ratione quae
@@ -363,7 +363,7 @@
                 eaque placeat pariatur nostrum ipsam nobis nesciunt illo obcaecati atque delectus.
                 Consectetur quasi eveniet non.</p>
         </div>
-        <div class="glass" style="--r:25;" data-text="Giyuu Tomioka">
+        <div class="glass" style="--r:25;" data-text="Giyu Tomioka">
             <p>
                 Odio natus delectus ea voluptas rerum accusamus aut veniam!
                 Impedit inventore corrupti, quo perferendis
