--- a/index.html
+++ b/index.html
@@ -124,49 +124,46 @@
 </div>
 <!-- his comrades info -->
 <section class="nike" id="nike">
-    <div class="containerc">
-        <div class="cardc">
-            <div class="imgBxc">
-                <img src="assets/imgs/inosuke2.jpg">
+    <div class="containerk2">
+        <div class="cardk2">
+            <div class="boxk2">
+                <div class="contentk2">
+                    <h2>01</h2>
+                    <h3>Inosuke</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Mollitia, aliquam! Minus officiis nobis sapiente unde doloribus veritatis?
+                        Ipsam assumenda quae minus ex iste blanditiis repudiandae
+                        iusto eveniet, perferendis rerum porro.
+                    </p>
+                </div>
             </div>
-            <div class="contentc">
-                <h2>Inosuke</h2>
-                <div class="size">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Amet itaque quas, minus libero cum odio ratione quae
-                    sunt similique quibusdam culpa voluptates harum atque,
-                    dolorem hic quisquam alias laudantium quam!</p>
-                </div>
-                </div>
         </div>
-        <div class="cardc">
-            <div class="imgBxc">
-                <img src="assets/imgs/nezuko.jpg">
+        <div class="cardk2">
+            <div class="boxk2">
+                <div class="contentk2">
+                    <h2>02</h2>
+                    <h3>Nezuko</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Mollitia, aliquam! Minus officiis nobis sapiente unde doloribus veritatis?
+                        Ipsam assumenda quae minus ex iste blanditiis repudiandae
+                        iusto eveniet, perferendis rerum porro.
+                    </p>
+                </div>
             </div>
-            <div class="contentc">
-                <h2>Nezuko</h2>
-                <div class="size">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Amet itaque quas, minus libero cum odio ratione quae
-                    sunt similique quibusdam culpa voluptates harum atque,
-                    dolorem hic quisquam alias laudantium quam!</p>
-                </div>
-                </div>
         </div>
-        <div class="cardc">
-            <div class="imgBxc">
-                <img src="assets/imgs/zenitsu2.jpg">
+        <div class="cardk2">
+            <div class="boxk2">
+                <div class="contentk2">
+                    <h2>03</h2>
+                    <h3>Zenitsu</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Mollitia, aliquam! Minus officiis nobis sapiente unde doloribus veritatis?
+                        Ipsam assumenda quae minus ex iste blanditiis repudiandae
+                        iusto eveniet, perferendis rerum porro.
+                    </p>
+                </div>
             </div>
-            <div class="contentc">
-                <h2>Zenitsu</h2>
-                <div class="size">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Amet itaque quas, minus libero cum odio ratione quae
-                    sunt similique quibusdam culpa voluptates harum atque,
-                    dolorem hic quisquam alias laudantium quam!</p>
-                </div>
-                </div>
-        </div>  
+        </div>
     </div>
 </section>
 <!-- his comrades info end -->
